--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   bloc: ^8.1.0
   connectivity_plus: ^3.0.2
   equatable: ^2.0.5
+  flex_color_scheme: ^6.1.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
